# ai-rules-clean

./: .gitignore  CLAUDE.md  Makefile  N8N_MCP_SETUP_GUIDE.md  README.md  TEST_RESULTS_SUMMARY.md  claude_desktop_n8n_config.json  pyproject.toml  requirements.txt  test_mcp_tools.js  test_n8n_api.js  test_n8n_mcp.js
.claude/: behavior_rules.json  claude.md  settings.json  settings.local.json  settings.president_safe.json  settings.safe.json
.cursor/rules/: dev-rules.mdc  globals.mdc  performance.mdc  project-management.mdc  structured-logging.mdc  testing.mdc  uiux.mdc
.github/: CLAUDE_GITHUB_SETUP.md  CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/mcp/: claude-cursor-bridge.json  postgres-mcp-server.json
.github/scripts/: claude-handler.py  claude-pr-reviewer.py
.github/workflows/: ci.yml  claude-code.yml  claude-pr-review.yml  format_fix.yml
.specstory/history/: 2025-06-24_06-01Z-バックグラウンドターミナルの準備問題.md  2025-06-24_06-39Z-画面分割の問題について.md  2025-06-24_08-41Z-discussing-claude-code-communication.md  2025-06-25_03-22Z-aiツールの設定と連携について.md  2025-06-26_05-47Z-automate-cursor-work-status-updates.md  2025-06-26_06-52Z-ディレクトリの整理と解説.md  2025-06-26_08-11Z-ディレクトリの設定とスクリプト構成.md  2025-06-26_13-15Z-ログアウトとデフォルトメッセージ設定.md  2025-06-26_15-03Z-ai組織立ち上げの設定について.md  2025-06-26_17-01Z-ai組織の手動テーマ選択問題.md  2025-06-26_17-21Z-generate-a-name-for-the-chat.md  2025-06-27_09-17Z-ワーカーとプレジデントの実行問題.md  2025-06-27_11-21Z-should-i-use-the-custom-api-key.md  2025-07-01_06-06Z-generate-a-name-for-the-chat.md  2025-07-01_09-39Z-プロジェクトの使用制限についての懸念.md  2025-07-02_02-44Z-readmeのコマンドが効かない問題.md  2025-07-05_11-35Z-コマンド実行の問題を解決する.md  2025-07-05_17-44Z-プレジデントが起動しない問題.md  2025-07-06_11-05Z-データベースの参照タイミング.md  2025-07-08_01-04Z-テストの確認.md  2025-07-08_05-25Z-ブランチ切り替えのための変更保存.md  2025-07-09_06-46Z-readmeに問題がありますか.md  2025-07-14_13-17Z-続きの作業を進める.md  2025-07-16_07-17Z-install-software-package-on-macos.md  2025-07-16_07-24Z-思考法の取り入れについての議論.md  2025-07-17_04-39Z-gitの最新にロールバックする.md  2025-07-18_03-47Z-can-you-respond.md
config/: .claude_auto_trigger  .mcp.json  .mcp.json.example  .pre-commit-config.enhanced.yaml  super_claude_config.yaml  test_output.json  unified_config.json
config/cursor/: .cursorignore
config/dev/: .mypy.ini
config/docker/: Dockerfile.integration  docker-compose.integration.yml
config/editor/: .cursorindexignore  .cursorrules  .forbidden-move
config/git/: .gitattributes  .pre-commit-config 2.yaml
config/n8n/: N8N_API_SETUP_GUIDE.md  (+2 more)
data/: template_conversion_report.json
docs/: CHANGELOG.md  CONTAMINATION_CLEANUP_REPORT.md  IMPLEMENTATION_STATUS.md  INDEX.md  Index_20250714_151100.md  LIGHTWEIGHT_AUTO_LEARNING.md  SECURITY_VIOLATION_ANALYSIS.md  SUPER_CLAUDE_INTEGRATION_PLAN.md  SUPER_CLAUDE_INTEGRATION_SUCCESS_REPORT.md  SYSTEM_OVERHAUL_COMPLETION_REPORT.md  TEMPLATE_USAGE.md  UPDATE_SUMMARY.md  startup_checklist.md  workflow_organization.md
docs_mcp/: Final__ASAGAMI_CURSOR_INTEGRATION_SPECIFICATION.md  INTEGRATION_IMPLEMENTATION_GUIDE.md  MCP_DESIGN_SPECIFICATION.md  REST_API_DESIGN_SPECIFICATION.md  UNIFIED_API_MCP_INTEGRATION_SPECIFICATION.md
runtime/: COMPLETE_SYSTEM_OVERHAUL_REPORT.md  critical_incident_report_20250710.md  cursor-claude-sync.json  database_consolidation_final_report.md  db_migration_report.md  dynamic_mode_test.py  file_organization_executed.md  file_organization_report.md  president_session_state.json  session_test_record.txt  startup_checklist.md  startup_state.json  status_display.sh  supabase_integration_final_report.md  unified-president-declare.json
scripts/: DEPENDENCIES.md  README.md  check_web_ui_status.py  slack_notify.py  test_web_ui.py
src/: apply_file_organization.py  main_ai.py  test_realtime_learning.py
supabase/: config.toml
tests/: README.md  integration_system_validation.py  integration_test.py  mistake-prevention-ci.py  test_basic.py  test_claude_cursor_integration.js  test_gemini_2_5_pro.py
(+820 files in other folders)
